# demo-opentelemetry-go

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  docker-compose.yml
.github/workflows/: ci.yaml
basic/: BUILD.bazel  Dockerfile  go.mod  go.sum  main.go
prometheus/: prometheus.yml
rest/: BUILD.bazel  Dockerfile  go.mod  go.sum  main.go
